[package]
name = "rusty_agent"
version = "0.1.1"
authors = ["tmetsch"]
edition = "2021"
description = "multi-agent systems framework."
license-file = "LICENSE"
repository = "https://github.com/tmetsch/rusty_agent/"
categories = ["algorithms", "science"]
keywords = ["multi-agent", "agent", "distributed-systems"]

[dependencies]
futures = "~0.3"
zmq = "~0.9"

[[example]]
name = "sample_agent"
path = "examples/sample_agent.rs"
